--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-logo {
@@ -35,4 +38,43 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.box {
+  background-color: #61dafb;
+  height: 500px;
+  width: 500px;
+  border-radius: 20px;
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 25px;
+}
+
+.submit-button {
+  margin: 30px 0px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  border-color: transparent;
+  cursor: pointer;
+}
+
+.wallet-button {
+  margin-top: 20px;
+  background-color: orange;
+  color: white;
+  border-color: transparent;
+  border-radius: 10px;
+  height: 30px;
+  padding: 0 30px;
+  cursor: pointer;
+}
+
+.mixer-radio {
+  display: flex;
+  flex-direction: row;
+  padding: 25px;
 }
