--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 100px;
 }
 
 .App-logo {
@@ -41,9 +42,9 @@
 }
 
 .box {
-  background-color: #61dafb;
-  height: 500px;
-  width: 500px;
+  background-color: #94FEBF;
+  height: 300px;
+  width: 300px;
   border-radius: 20px;
   margin-top: 10%;
   display: flex;
@@ -77,4 +78,233 @@
   display: flex;
   flex-direction: row;
   padding: 25px;
+  margin: 0px 30px;
+}
+
+#circle-container {
+  transform: rotateX(75deg);
+  width: 200px;
+  height: 200px;
+}
+
+.circle {
+  width: 400px;
+  height: 400px;
+  -moz-border-radius: 200px;
+  -webkit-border-radius: 200px;
+  border-radius: 200px;
+  box-shadow: 1px 25px 0px 0px black inset, 5px 10px 0px 50px white inset;
+  -moz-animation: spin .4s infinite linear;
+  -webkit-animation: spin .4s infinite linear;
+  z-index: 1;
+  background: rgba(0,0,0,0.5);
+}
+
+.circle-two {
+  position: absolute;
+  z-index: -10;
+  top: 140px;
+  width: 350px;
+  height: 350px;
+  -moz-border-radius: 165px;
+  -webkit-border-radius: 165px;
+  border-radius: 165px;
+  background: rgba(0,0,0,0.3);
+  box-shadow: 2px 10px 0px 0px dimgrey inset, 4px 1px 0px 50px white inset;
+  -moz-animation: spin .2s infinite linear;
+  -webkit-animation: spin .2s infinite linear;
+}
+
+.circle-three {
+  position: absolute;
+  z-index: -20;
+  top: 240px;
+  left: 20px;
+  width: 300px;
+  height: 300px;
+  -moz-border-radius: 150px;
+  -webkit-border-radius: 150px;
+  border-radius: 150px;
+  box-shadow: 1px 10px 0px 0px black inset, 4px 1px 0px 50px white inset;
+  -moz-animation: spin .4s infinite linear;
+  -webkit-animation: spin .4s infinite linear;
+  background: rgba(0,0,0,0.5);
+}
+
+.circle-four {
+  position: absolute;
+  z-index: -30;
+  top: 400px;
+  left: 60px;
+  width: 230px;
+  height: 230px;
+  -moz-border-radius: 115px;
+  -webkit-border-radius: 115px;
+  border-radius: 115px;
+  box-shadow: 5px 0px 0px 0px black inset, 4px 1px 0px 50px white inset;
+  -moz-animation: spin .2s infinite linear;
+  -webkit-animation: spin .2s infinite linear;
+  background: rgba(220,220,220,0.5);
+}
+
+.circle-five {
+  position: absolute;
+  z-index: -40;
+  top: 490px;
+  left: 80px;
+  width: 200px;
+  height: 200px;
+  -moz-border-radius: 100px;
+  -webkit-border-radius: 100px;
+  border-radius: 100px;
+  box-shadow: 5px 0px 0px 1px gray inset, 4px 1px 0px 50px gainsboro inset;
+  -moz-animation: spin .3s infinite linear;
+  -webkit-animation: spin .3s infinite linear;
+  background: rgba(105,105,105,0.9);
+}
+
+.circle-six {
+  position: absolute;
+  z-index: -50;
+  top: 590px;
+  left: 80px;
+  width: 150px;
+  height: 150px;
+  -moz-border-radius: 100px;
+  -webkit-border-radius: 100px;
+  border-radius: 100px;
+  box-shadow: 1px 16px 0px 0px black inset, 5px 10px 0px 50px white inset;
+  -moz-animation: spin .3s infinite linear;
+  -webkit-animation: spin .3s infinite linear;
+  background: rgba(0,0,0,0.5);
+}
+
+.circle-seven {
+  position: absolute;
+  z-index: -60;
+  top: 670px;
+  left: 80px;
+  width: 100px;
+  height: 100px;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  box-shadow: 1px 5px 0px 10px dimgrey inset, 3px 1px 0px 10px white inset;
+  -moz-animation: spin .3s infinite linear;
+  -webkit-animation: spin .3s infinite linear;
+  background: rgba(200,200,200,1);
+}
+
+.circle-eight {
+  position: absolute;
+  z-index: -70;
+  top: 720px;
+  left: 80px;
+  width: 80px;
+  height: 80px;
+  -moz-border-radius: 40px;
+  -webkit-border-radius: 40px;
+  border-radius: 40px;
+  box-shadow: 2px 10px 0px 0px black inset, 4px 1px 0px 50px white inset;
+  -moz-animation: spin .3s infinite linear;
+  -webkit-animation: spin .3s infinite linear;
+  background: rgba(0,0,0,0.5);
+}
+
+.circle-nine {
+  position: absolute;
+  z-index: -80;
+  top: 780px;
+  left: 90px;
+  width: 50px;
+  height: 50px;
+  -moz-border-radius: 25px;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
+  box-shadow: 1px 10px 0px 0px #708090 inset, 4px 1px 0px 50px white inset;
+  -moz-animation: spin .4s infinite linear;
+  -webkit-animation: spin .4s infinite linear;
+  background: rgba(0,0,0,0.5);
+}
+
+.circle-ten {
+  position: absolute;
+  z-index: -90;
+  top: 820px;
+  left: 100px;
+  width: 25px;
+  height: 25px;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
+  box-shadow: 1px 10px 0px 0px #2F4F4F inset, 4px 1px 0px 50px white inset;
+  -moz-animation: spin .4s infinite linear;
+  -webkit-animation: spin .4s infinite linear;
+  background: rgba(0,0,0,0.5);
+}
+
+.circle-eleven {
+  position: absolute;
+  z-index: -100;
+  top: 840px;
+  left: 110px;
+  width: 15px;
+  height: 15px;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  box-shadow: 1px 10px 0px 0px black inset, 4px 1px 0px 50px white inset;
+  -moz-animation: spin .2s infinite linear;
+  -webkit-animation: spin .2s infinite linear;
+  background: rgba(0,0,0,0.5);
+}
+
+
+
+@-moz-keyframes spin {
+  0% {
+      -moz-transform: rotate(0deg);
+  }
+
+  100% {
+      -moz-transform: rotate(360deg);
+  };
+}
+
+@-moz-keyframes spinoff {
+  0% {
+      -moz-transform: rotate(0deg);
+  }
+
+  100% {
+      -moz-transform: rotate(-360deg);
+  };
+}
+
+@-webkit-keyframes spin {
+  0% {
+      -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+      -webkit-transform: rotate(360deg);
+  };
+}
+
+@-webkit-keyframes spinoff {
+  0% {
+      -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+      -webkit-transform: rotate(-360deg);
+  };
+}
+
+.card-selector {
+  margin-top: 25px;
+  width: 300px;
+  background-color: red;
+  display: flex;
+  justify-content: space-between;
 }
